# python

./: .dockerignore  404.html  AGENTS.md  index.html  mise.toml  objects.inv  pyproject.toml
.github/workflows/: check.yml  docs.yml
CONTRIBUTING/: index.html
docs/: README.md
project/: app.py
reference/app/: index.html
scripts/: init.py  rename.py
search/: search_index.json
tests/: test_app.py
