[project]
name = "project"
version = "0.1.0"
description = "Python Project Template"
readme = "docs/README.md"
authors = [{name = "Amr Abed", email = ""}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
]

[project.scripts]
app = "project.app:main"
init = "scripts.init:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "coverage>=7.14.3",
    "pre-commit>=4.0.1",
    "pyright>=1.1.411",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-material>=9.6.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
branch = true
source = ["project"]

[tool.coverage.report]
omit = ["tests/*"]
# fail_under = 90

[tool.pyright]
exclude = ["**/__pycache__", "**/.pytest_cache", ".venv"]
reportMissingImports = "error"
